--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "@octokit/core": "^3.5.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^13.2.0",
