--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./
+        with: 
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
