feat: string replacement in protect-branch-comment

--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ inputs:
     description: 'Comment to leave on PR on failed check of PR head branch.'
     default: >
       Thank you for your Pull Request! In order to be considered for merging,
-      the pull request description must not be from the "main" branch. This
+      the pull request description must not be from the "%branch%" branch. This
       is described in our Contributing Guide. We are closing this pull request
       and we would suggest that you implement your changes as described in our
       documents and open a new pull request.
