--- a/action.yml
+++ b/action.yml
@@ -43,6 +43,9 @@ inputs:
       specific issue number. This is described in our Contributing Guide. We are closing this 
       pull request for now but you can update the pull request description and reopen the pull 
       request.
+
+      The check is looking for a phrase similar to: "Fixes #XYZ" or "Resolves #XYZ" where XYZ is the issue
+      number that this PR is meant to address.
   protected-branch:
     required: true
     description: 'Protected Branch'
@@ -57,8 +60,8 @@ inputs:
     default: >
       ## Protected Branch
       
-      In order to be considered for merging, the pull request description must 
-      not be from the "%branch%" branch. This is described in our Contributing Guide. 
+      In order to be considered for merging, the pull request changes must 
+      not be implemented on the "%branch%" branch. This is described in our Contributing Guide. 
       We are closing this pull request and we would suggest that you implement your changes as 
       described in our Contributing Guide and open a new pull request.
   title-check-enable:
@@ -74,6 +77,11 @@ inputs:
       In order to be considered for merging, the pull request title must match the specification in 
       [@commitlint/conventional-commit](https://www.conventionalcommits.org/en/v1.0.0/). You can edit
       the title in order for this check to pass.
+
+      Most often, our PR titles are something like one of these:
+      - "docs: correct typo in README"
+      - "feat: implement dark mode"
+      - "fix: correct remove button behavior"
   watch-files:
     required: true
     description: 'Files to flag modifications'
