chore: update action.yml for release

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,13 @@
 name: 'PR Compliance Action'
-description: 'Action to check PR compliance on various aspects'
+description: >
+  Action to check PR compliance on various aspects:
+  
+  - PR Title vs @commitlint/conventional-commit
+  - PR Body referring to an issue
+  - PR Head branch not being a protected branch
+  - PR modifying specific files
+icon: git-pull-request
+color: green
 author: 'Matthew Foley'
 inputs:
   repo-token:
