--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ inputs:
   body-regex:
     required: true
     description: 'PR Body Regex'
-    default: '(fix|clos|resolv)(es)* #\d+'
+    default: '(fix|resolv|clos)(e)*(s|d)* #\d+'
   body-auto-close:
     required: true
     description: 'Whether or not to auto-close on failed check of PR Body'
