--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
     description: >
       PR Authors to ignore (e.g. dependabot). All checks will be skipped and action outputs will be
       set to true if the PR has one of these authors.
-    default: >
+    default: |
       dependabot
       dependabot[bot]
   base-comment:
