--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
-    "@octokit/core": "^3.5.1"
+    "@octokit/core": "^3.5.1",
+    "conventional-changelog-conventionalcommits": "^4.6.1",
+    "conventional-commit-types": "^3.0.0",
+    "conventional-commits-parser": "^3.2.3"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^13.2.0",
-    "@commitlint/lint": "^13.2.0",
     "@types/node": "^16.11.1",
     "@typescript-eslint/parser": "^5.1.0",
     "@vercel/ncc": "^0.31.1",
