--- a/action.yml
+++ b/action.yml
@@ -77,16 +77,16 @@ inputs:
       described in our Contributing Guide and open a new pull request.
   title-check-enable:
     required: true
-    description: 'Whether or not to lint PR title per @commitlint/conventional-commit.'
+    description: 'Whether or not to lint PR title per [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/)'
     default: true
   title-comment: 
     required: true
-    description: 'Comment to leave on PR on failed check of PR title per @commitlint/conventional-commit'
+    description: 'Comment to leave on PR on failed check of PR title per [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/)'
     default: >
       ## Conventional Commit PR Title
       
       In order to be considered for merging, the pull request title must match the specification in 
-      [@commitlint/conventional-commit](https://www.conventionalcommits.org/en/v1.0.0/). You can edit
+      [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/). You can edit
       the title in order for this check to pass.
 
       Most often, our PR titles are something like one of these:
@@ -113,7 +113,7 @@ outputs:
   branch-check:
     description: 'Result of check to ensure PR head is not protected branch.'
   title-check:
-    description: 'Result of check to ensure PR title is formatted per @commitlint/conventional-commit'
+    description: 'Result of check to ensure PR title is formatted per [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/)'
   watch-files-check:
     description: 'Result of check for watched files having been modified. True if no modifications found to watched files.'
 runs:
