--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ inputs:
     required: true
     description: >
       Whether to trigger a failing check when the body-regex is not matched in the PR body.
-    default: true
+    default: false
   body-auto-close:
     required: true
     description: 'Whether or not to auto-close on failed check of PR Body'
