feat: body-fail option (#193)
feat: body-fail option

adds body-fail input with a default value of false. If set to true
the action will show a failing check if PR body does not match
body-regex. By default, only a warning is registered.

--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,11 @@ inputs:
     required: true
     description: 'PR Body Regex'
     default: '(fix|resolv|clos)(e)*(s|d)* #\d+'
+  body-fail:
+    required: true
+    description: >
+      Whether to trigger a failing check when the body-regex is not matched in the PR body.
+    default: false
   body-auto-close:
     required: true
     description: 'Whether or not to auto-close on failed check of PR Body'
