--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,24 @@ inputs:
       Thank you for your Pull Request! We have run several checks on this pull request in order
       to make sure it's suitable for merging into this project.  The results are listed in the 
       following section.
+  body-invalid-regex:
+    required: true
+    description: 'Regex to indicate PR desription is invalid'
+    default: ''
+  body-invalid-auto-close:
+    required: true
+    description: 'Whether or not to auto-close on failed check of invalid PR Body'
+    default: true
+  body-invalid-fail:
+    required: true
+    description: >
+      Whether to trigger a failing check when the body-invalid-regex is matched in the PR body.
+    default: false
+  body-invalid-comment:
+    required: true
+    description: 'Comment to leave on PR on failed check of invalid PR Body'
+    default: >
+      ## Invalid PR Description
   body-regex:
     required: true
     description: 'PR Body Regex'
@@ -115,6 +133,8 @@ inputs:
 outputs:
   body-check:
     description: 'Result of match for PR Body against configured regex.'
+  body-invalid-check:
+    description: 'Result of match for PR Body against configured regex indicating invalid content.'
   branch-check:
     description: 'Result of check to ensure PR head is not protected branch.'
   title-check:
